@@ -1,30 +1,29 @@
 package dk.kvalitetsit.hjemmebehandling.controller;
 
 import dk.kvalitetsit.hjemmebehandling.api.DtoMapper;
-import dk.kvalitetsit.hjemmebehandling.api.PartialUpdateQuestionnaireResponseRequest;
-import dk.kvalitetsit.hjemmebehandling.api.QuestionnaireResponseDto;
-import dk.kvalitetsit.hjemmebehandling.constants.ExaminationStatus;
-import dk.kvalitetsit.hjemmebehandling.constants.errors.ErrorDetails;
 import dk.kvalitetsit.hjemmebehandling.controller.exception.BadRequestException;
-import dk.kvalitetsit.hjemmebehandling.api.PaginatedList;
+import dk.kvalitetsit.hjemmebehandling.model.QualifiedId;
 import dk.kvalitetsit.hjemmebehandling.model.QuestionnaireResponseModel;
-import dk.kvalitetsit.hjemmebehandling.service.AuditLoggingService;
+import dk.kvalitetsit.hjemmebehandling.model.constants.errors.ErrorDetails;
 import dk.kvalitetsit.hjemmebehandling.service.QuestionnaireResponseService;
 import dk.kvalitetsit.hjemmebehandling.service.exception.AccessValidationException;
 import dk.kvalitetsit.hjemmebehandling.service.exception.ServiceException;
+import dk.kvalitetsit.hjemmebehandling.service.logging.AuditLoggingService;
 import dk.kvalitetsit.hjemmebehandling.types.Pagination;
-import io.swagger.v3.oas.annotations.tags.Tag;
+import org.openapitools.api.QuestionnaireResponseApi;
+
+import org.openapitools.model.PartialUpdateQuestionnaireResponseRequest;
+import org.openapitools.model.QuestionnaireResponseDto;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @RestController
-@Tag(name = "QuestionnaireResponse", description = "API for manipulating and retrieving QuestionnaireResponses.")
-public class QuestionnaireResponseController extends BaseController {
+public class QuestionnaireResponseController extends BaseController implements QuestionnaireResponseApi {
     private static final Logger logger = LoggerFactory.getLogger(QuestionnaireResponseController.class);
 
     private final QuestionnaireResponseService questionnaireResponseService;
@@ -37,80 +36,70 @@ public class QuestionnaireResponseController extends BaseController {
         this.dtoMapper = dtoMapper;
     }
 
-    @PostMapping(value = "/v1/questionnaireresponse")
-    public void createQuestionnaireResponse(QuestionnaireResponseDto questionnaireResponse) {
-        throw new UnsupportedOperationException();
-    }
 
-    @GetMapping(value = "/v1/questionnaireresponse/{carePlanId}")
-    public ResponseEntity<PaginatedList<QuestionnaireResponseDto>> getQuestionnaireResponsesByCarePlanId(
-            @PathVariable("carePlanId") String carePlanId,
-            @RequestParam("questionnaireIds") List<String> questionnaireIds,
-            int pageNumber,
-            int pageSize
-    ) {
-        if(carePlanId == null || questionnaireIds == null || questionnaireIds.isEmpty()) {
+
+
+    @Override
+    public ResponseEntity<List<QuestionnaireResponseDto>> getQuestionnaireResponsesByCarePlanId(String carePlanId, List<String> questionnaireIds, Optional<Integer> limit, Optional<Integer> offset) {
+        if (carePlanId == null || questionnaireIds == null || questionnaireIds.isEmpty()) {
             throw new BadRequestException(ErrorDetails.PARAMETERS_INCOMPLETE);
         }
-
         try {
-            Pagination pagination = new Pagination(pageNumber,pageSize);
 
-            List<QuestionnaireResponseModel> questionnaireResponses = questionnaireResponseService.getQuestionnaireResponses(carePlanId, questionnaireIds);
+            List<QuestionnaireResponseModel> questionnaireResponses = questionnaireResponseService.getQuestionnaireResponses(
+                    new QualifiedId.CarePlanId(carePlanId),
+                    questionnaireIds.stream().map(QualifiedId.QuestionnaireId::new).toList()
+            );
 
-            auditLoggingService.log("GET /v1/questionnaireresponse/"+carePlanId, questionnaireResponses.stream().map(QuestionnaireResponseModel::getPatient).collect(Collectors.toList()));
+            auditLoggingService.log("GET /v1/questionnaireresponse/" + carePlanId, questionnaireResponses.stream().map(QuestionnaireResponseModel::patient).toList());
 
-            var dtos = questionnaireResponses
-                    .stream()
-                    .map(dtoMapper::mapQuestionnaireResponseModel)
-                    .collect(Collectors.toList());
+            var dtos = questionnaireResponses.stream().map(dtoMapper::mapQuestionnaireResponseModel).toList();
 
-            return ResponseEntity.ok(new PaginatedList<>(dtos, pagination));
-        }
-        catch(AccessValidationException | ServiceException e) {
+            return ResponseEntity.ok(dtos);
+        } catch (AccessValidationException | ServiceException e) {
             logger.error("Could not look up questionnaire responses by cpr and questionnaire ids", e);
             throw toStatusCodeException(e);
         }
     }
 
-    @GetMapping(value = "/v1/questionnaireresponse")
-    public ResponseEntity<List<QuestionnaireResponseDto>> getQuestionnaireResponsesByStatus(
-            @RequestParam("status") List<ExaminationStatus> statuses,
-            int pageNumber,
-            int pageSize
-    ) {
-        if(statuses == null || statuses.isEmpty()) {
+    @Override
+    public ResponseEntity<List<QuestionnaireResponseDto>> getQuestionnaireResponsesByStatus(List<org.openapitools.model.ExaminationStatus> status, Optional<Integer> limit, Optional<Integer> offset) {
+        if (status == null || status.isEmpty()) {
             throw new BadRequestException(ErrorDetails.PARAMETERS_INCOMPLETE);
         }
-
         try {
-            List<QuestionnaireResponseModel> questionnaireResponses = questionnaireResponseService.getQuestionnaireResponsesByStatus(statuses, new Pagination(pageNumber, pageSize));
-            auditLoggingService.log("GET /v1/questionnaireresponse/", questionnaireResponses.stream().map(QuestionnaireResponseModel::getPatient).collect(Collectors.toList()));
-            return ResponseEntity.ok(questionnaireResponses.stream().map(dtoMapper::mapQuestionnaireResponseModel).collect(Collectors.toList()));
-        }
-        catch(AccessValidationException | ServiceException e) {
+            List<QuestionnaireResponseModel> questionnaireResponses = questionnaireResponseService.getQuestionnaireResponsesByStatus(status.stream().map(dtoMapper::mapExaminationStatusDto).toList(), new Pagination(offset, limit));
+            auditLoggingService.log("GET /v1/questionnaireresponse/", questionnaireResponses.stream().map(QuestionnaireResponseModel::patient).toList());
+            return ResponseEntity.ok(questionnaireResponses.stream().map(dtoMapper::mapQuestionnaireResponseModel).toList());
+        } catch (AccessValidationException | ServiceException e) {
             logger.error("Could not look up questionnaire responses by status", e);
             throw toStatusCodeException(e);
         }
     }
 
-    @PatchMapping(value = "/v1/questionnaireresponse/{id}")
-    public ResponseEntity<Void> patchQuestionnaireResponse(
-            @PathVariable String id,
-            @RequestBody PartialUpdateQuestionnaireResponseRequest request
-    ) {
-        if(request.getExaminationStatus() == null) {
-            throw new BadRequestException(ErrorDetails.PARAMETERS_INCOMPLETE);
-        }
 
+
+
+    @Override
+    public ResponseEntity<Void> patchQuestionnaireResponse(String id, PartialUpdateQuestionnaireResponseRequest partialUpdateQuestionnaireResponseRequest) {
         try {
-            QuestionnaireResponseModel questionnaireResponse = questionnaireResponseService.updateExaminationStatus(id, request.getExaminationStatus());
-            auditLoggingService.log("PATCH /v1/questionnaireresponse/"+id, questionnaireResponse.getPatient());
-        }
-        catch(AccessValidationException | ServiceException e) {
+            var examinationStatus = partialUpdateQuestionnaireResponseRequest
+                    .getExaminationStatus()
+                    .map(dtoMapper::mapExaminationStatusDto)
+                    .orElseThrow(() -> new BadRequestException(ErrorDetails.PARAMETERS_INCOMPLETE));
+
+            QuestionnaireResponseModel questionnaireResponse = questionnaireResponseService.updateExaminationStatus(
+                    new QualifiedId.QuestionnaireResponseId(id),
+                    examinationStatus
+            );
+
+            auditLoggingService.log("PATCH /v1/questionnaireresponse/" + id, questionnaireResponse.patient());
+
+            return ResponseEntity.ok().build();
+
+        } catch (AccessValidationException | ServiceException e) {
             logger.error("Could not update questionnaire response", e);
             throw toStatusCodeException(e);
         }
-        return ResponseEntity.ok().build();
     }
 }
