@@ -1,5 +1,15 @@
 package dk.kvalitetsit.hjemmebehandling.fhir;
 
+import ca.uhn.fhir.model.api.TemporalPrecisionEnum;
+import dk.kvalitetsit.hjemmebehandling.model.ExaminationStatus;
+import dk.kvalitetsit.hjemmebehandling.model.PractitionerModel;
+import dk.kvalitetsit.hjemmebehandling.model.QualifiedId;
+import dk.kvalitetsit.hjemmebehandling.model.ThresholdModel;
+import dk.kvalitetsit.hjemmebehandling.model.constants.Systems;
+import dk.kvalitetsit.hjemmebehandling.model.constants.TriagingCategory;
+import dk.kvalitetsit.hjemmebehandling.types.ThresholdType;
+import org.hl7.fhir.r4.model.*;
+
 import java.sql.Date;
 import java.time.Instant;
 import java.time.LocalDateTime;
@@ -9,28 +19,9 @@ import java.util.List;
 import java.util.Optional;
 import java.util.TimeZone;
 import java.util.function.Function;
-import java.util.stream.Collectors;
-
-import dk.kvalitetsit.hjemmebehandling.model.PractitionerModel;
-import org.hl7.fhir.r4.model.BooleanType;
-import org.hl7.fhir.r4.model.DateTimeType;
-import org.hl7.fhir.r4.model.Extension;
-import org.hl7.fhir.r4.model.Quantity;
-import org.hl7.fhir.r4.model.Range;
-import org.hl7.fhir.r4.model.Reference;
-import org.hl7.fhir.r4.model.StringType;
-import org.hl7.fhir.r4.model.TimeType;
-import org.hl7.fhir.r4.model.Type;
-
-import ca.uhn.fhir.model.api.TemporalPrecisionEnum;
-import dk.kvalitetsit.hjemmebehandling.constants.ExaminationStatus;
-import dk.kvalitetsit.hjemmebehandling.constants.Systems;
-import dk.kvalitetsit.hjemmebehandling.constants.TriagingCategory;
-import dk.kvalitetsit.hjemmebehandling.model.ThresholdModel;
-import dk.kvalitetsit.hjemmebehandling.types.ThresholdType;
 
 public class ExtensionMapper {
-    protected static final LocalDateTime MAX_SATISFIED_UNTIL_DATE = LocalDateTime.of(9999, Month.DECEMBER, 31, 11, 00);
+    protected static final LocalDateTime MAX_SATISFIED_UNTIL_DATE = LocalDateTime.of(9999, Month.DECEMBER, 31, 11, 0);
 
     public static Extension mapActivitySatisfiedUntil(Instant pointInTime) {
         return buildDateTimeExtension(Systems.ACTIVITY_SATISFIED_UNTIL, pointInTime);
@@ -43,21 +34,21 @@ public class ExtensionMapper {
     public static Extension mapCustomUserId(String customUserId) {
         return buildStringExtension(Systems.CUSTOM_USER_ID, customUserId);
     }
-    
-	public static Extension mapCustomUserName(String customUserName) {
+
+    public static Extension mapCustomUserName(String customUserName) {
         return buildStringExtension(Systems.CUSTOM_USER_NAME, customUserName);
-	}
-    
+    }
+
     public static Extension mapExaminationStatus(ExaminationStatus examinationStatus) {
         return buildStringExtension(Systems.EXAMINATION_STATUS, examinationStatus.toString());
     }
 
     public static Extension mapExaminationAuthor(PractitionerModel practitioner) {
-        return buildStringExtension(Systems.EXAMINATION_AUTHOR, practitioner.getId().toString());
+        return buildStringExtension(Systems.EXAMINATION_AUTHOR, practitioner.id().toString());
     }
 
     public static Extension mapOrganizationId(String organizationId) {
-        return buildReferenceExtension(Systems.ORGANIZATION, organizationId);
+        return buildReferenceExtension(organizationId);
     }
 
     public static Extension mapOrganizationDeadlineTimeDefault(TimeType time) {
@@ -65,25 +56,27 @@ public class ExtensionMapper {
     }
 
     public static List<Extension> mapThresholds(List<ThresholdModel> thresholds) {
-        return thresholds.stream().map(ExtensionMapper::mapThreshold).collect(Collectors.toList());
+        return thresholds.stream().map(ExtensionMapper::mapThreshold).toList();
     }
 
     public static Extension mapThreshold(ThresholdModel threshold) {
-        Extension linkIdExtension = buildStringExtension(Systems.THRESHOLD_QUESTIONNAIRE_ITEM_LINKID, threshold.getQuestionnaireItemLinkId());
-        Extension thresholdTypeExtension = buildStringExtension(Systems.THRESHOLD_TYPE, threshold.getType().toString());
+        Extension linkIdExtension = buildStringExtension(Systems.THRESHOLD_QUESTIONNAIRE_ITEM_LINKID, threshold.questionnaireItemLinkId());
+        Extension thresholdTypeExtension = buildStringExtension(Systems.THRESHOLD_TYPE, threshold.type().toString());
         Extension thresholdValueExtension = null;
-        if(threshold.getValueBoolean() != null) {
-            thresholdValueExtension = buildBooleanExtension(Systems.THRESHOLD_VALUE_BOOLEAN, threshold.getValueBoolean());
+
+        if (threshold.valueBoolean() != null) {
+            thresholdValueExtension = buildBooleanExtension(threshold.valueBoolean());
+        } else if (threshold.valueOption() != null) {
+            thresholdValueExtension = buildStringExtension(Systems.THRESHOLD_VALUE_OPTION, threshold.valueOption());
+        } else if (threshold.valueQuantityLow() != null || threshold.valueQuantityHigh() != null) {
+            thresholdValueExtension = buildRangeExtension(threshold.valueQuantityLow(), threshold.valueQuantityHigh());
         }
-        else if(threshold.getValueOption() != null) {
-            thresholdValueExtension = buildStringExtension(Systems.THRESHOLD_VALUE_OPTION, threshold.getValueOption());
-        }
-        else if(threshold.getValueQuantityLow() != null || threshold.getValueQuantityHigh() != null) {
-            thresholdValueExtension = buildRangeExtension(Systems.THRESHOLD_VALUE_RANGE, threshold.getValueQuantityLow(), threshold.getValueQuantityHigh());
-        }
-        if(thresholdValueExtension != null)  return buildCompositeExtension(Systems.THRESHOLD, List.of(linkIdExtension, thresholdTypeExtension, thresholdValueExtension));
-        return buildCompositeExtension(Systems.THRESHOLD, List.of(linkIdExtension, thresholdTypeExtension));
+
+        return Optional.ofNullable(thresholdValueExtension)
+                .map(x -> buildCompositeExtension(List.of(linkIdExtension, thresholdTypeExtension, x)))
+                .orElse(buildCompositeExtension(List.of(linkIdExtension, thresholdTypeExtension)));
     }
+
 
     public static Extension mapAnswerOptionComment(String comment) {
         return buildStringExtension(Systems.ANSWER_OPTION_COMMENT, comment);
@@ -113,61 +106,63 @@ public class ExtensionMapper {
         return extractStringFromExtensions(extensions, Systems.EXAMINATION_AUTHOR);
     }
 
-    public static String extractOrganizationId(List<Extension> extensions) {
-        return extractReferenceFromExtensions(extensions, Systems.ORGANIZATION);
+    public static QualifiedId.OrganizationId extractOrganizationId(List<Extension> extensions) {
+        return QualifiedId.OrganizationId.from(extractReferenceFromExtensions(extensions));
     }
 
     public static TimeType extractOrganizationDeadlineTimeDefault(List<Extension> extensions) {
         return extractFromExtensions(extensions, Systems.ORGANIZATION_QUESTIONNAIRE_DEADLINE_TIME_DEFAULT, v -> ((TimeType) v));
     }
-    
+
     public static String extractCustomUserId(List<Extension> extensions) {
         return extractStringFromExtensions(extensions, Systems.CUSTOM_USER_ID);
     }
-    
+
     public static String extractCustomUserName(List<Extension> extensions) {
         return extractStringFromExtensions(extensions, Systems.CUSTOM_USER_NAME);
     }
 
     public static Optional<String> tryExtractOrganizationId(List<Extension> extensions) {
-        return tryExtractReferenceFromExtensions(extensions, Systems.ORGANIZATION);
+        return tryExtractReferenceFromExtensions(extensions);
     }
 
     public static List<ThresholdModel> extractThresholds(List<Extension> extensions) {
-        return extensions.stream().map(ExtensionMapper::extractThreshold).collect(Collectors.toList());
+        return extensions.stream().map(ExtensionMapper::extractThreshold).toList();
     }
 
     public static ThresholdModel extractThreshold(Extension extension) {
-        ThresholdModel thresholdModel = new ThresholdModel();
+        String questionnaireItemLinkId = extension.getExtensionString(Systems.THRESHOLD_QUESTIONNAIRE_ITEM_LINKID);
+        ThresholdType type = Enum.valueOf(ThresholdType.class, extension.getExtensionString(Systems.THRESHOLD_TYPE));
 
-        thresholdModel.setQuestionnaireItemLinkId( extension.getExtensionString(Systems.THRESHOLD_QUESTIONNAIRE_ITEM_LINKID) );
-        thresholdModel.setType( Enum.valueOf(ThresholdType.class, extension.getExtensionString(Systems.THRESHOLD_TYPE)) );
-        if ( extension.hasExtension(Systems.THRESHOLD_VALUE_BOOLEAN) ) {
-            BooleanType valueBoolean = (BooleanType) extension.getExtensionByUrl(Systems.THRESHOLD_VALUE_BOOLEAN).getValue();
-            thresholdModel.setValueBoolean( valueBoolean.booleanValue() );
+        Double valueQuantityLow = null;
+        Double valueQuantityHigh = null;
+        Boolean valueBoolean = null;
+        String valueOption = null;
+
+        if (extension.hasExtension(Systems.THRESHOLD_VALUE_BOOLEAN)) {
+            BooleanType valueBooleanType = (BooleanType) extension.getExtensionByUrl(Systems.THRESHOLD_VALUE_BOOLEAN).getValue();
+            valueBoolean = valueBooleanType.booleanValue();
         }
 
-        if ( extension.hasExtension(Systems.THRESHOLD_VALUE_OPTION) ) {
-            StringType valueOption = (StringType) extension.getExtensionByUrl(Systems.THRESHOLD_VALUE_OPTION).getValue();
-            thresholdModel.setValueOption( valueOption.getValue() );
+        if (extension.hasExtension(Systems.THRESHOLD_VALUE_OPTION)) {
+            StringType valueOptionType = (StringType) extension.getExtensionByUrl(Systems.THRESHOLD_VALUE_OPTION).getValue();
+            valueOption = valueOptionType.getValue();
         }
 
-
-
-        if ( extension.hasExtension(Systems.THRESHOLD_VALUE_RANGE) ) {
+        if (extension.hasExtension(Systems.THRESHOLD_VALUE_RANGE)) {
             Range valueRange = (Range) extension.getExtensionByUrl(Systems.THRESHOLD_VALUE_RANGE).getValue();
             if (valueRange.hasLow()) {
-                thresholdModel.setValueQuantityLow( valueRange.getLow().getValue().doubleValue() );
+                valueQuantityLow = valueRange.getLow().getValue().doubleValue();
             }
             if (valueRange.hasHigh()) {
-                thresholdModel.setValueQuantityHigh( valueRange.getHigh().getValue().doubleValue() );
+                valueQuantityHigh = valueRange.getHigh().getValue().doubleValue();
             }
         }
 
-        return thresholdModel;
+        return new ThresholdModel(questionnaireItemLinkId, type, valueQuantityLow, valueQuantityHigh, valueBoolean, valueOption);
     }
 
-    public static TriagingCategory extractTriagingCategoory(List<Extension> extensions) {
+    public static TriagingCategory extractTriagingCategory(List<Extension> extensions) {
         return extractEnumFromExtensions(extensions, Systems.TRIAGING_CATEGORY, TriagingCategory.class);
     }
 
@@ -179,17 +174,15 @@ public class ExtensionMapper {
         return extractStringFromExtensions(extensions, Systems.QUESTION_ABBREVIATION);
     }
 
-    private static Extension buildBooleanExtension(String url, boolean value) {
-        return new Extension(url, new BooleanType(value));
+    private static Extension buildBooleanExtension(boolean value) {
+        return new Extension(Systems.THRESHOLD_VALUE_BOOLEAN, new BooleanType(value));
     }
 
-    private static Extension buildCompositeExtension(String url, List<Extension> extensions) {
-        Extension extension = new Extension(url);
-
-        for(Extension e : extensions) {
+    private static Extension buildCompositeExtension(List<Extension> extensions) {
+        Extension extension = new Extension(Systems.THRESHOLD);
+        for (Extension e : extensions) {
             extension.addExtension(e);
         }
-
         return extension;
     }
 
@@ -202,21 +195,19 @@ public class ExtensionMapper {
         return new Extension(url, new DateTimeType(Date.from(value), TemporalPrecisionEnum.MILLI, TimeZone.getTimeZone("UTC")));
     }
 
-    private static Extension buildRangeExtension(String url, Double low, Double high) {
+    private static Extension buildRangeExtension(Double low, Double high) {
         Range range = new Range();
-
-        if(low != null) {
+        if (low != null) {
             range.setLow(new Quantity(low));
         }
-        if(high != null) {
+        if (high != null) {
             range.setHigh(new Quantity(high));
         }
-
-        return new Extension(url, range);
+        return new Extension(Systems.THRESHOLD_VALUE_RANGE, range);
     }
 
-    private static Extension buildReferenceExtension(String url, String value) {
-        return new Extension(url, new Reference(value));
+    private static Extension buildReferenceExtension(String value) {
+        return new Extension(Systems.ORGANIZATION, new Reference(value));
     }
 
     private static Extension buildStringExtension(String url, String value) {
@@ -237,35 +228,32 @@ public class ExtensionMapper {
             return result;
         });
     }
-    
+
     private static String extractStringFromExtensions(List<Extension> extensions, String url) {
         return extractFromOptionalExtensions(extensions, url, v -> ((StringType) v).getValue());
     }
 
-    private static String extractReferenceFromExtensions(List<Extension> extensions, String url) {
-        return extractFromExtensions(extensions, url, v -> ((Reference) v).getReference());
+    private static String extractReferenceFromExtensions(List<Extension> extensions) {
+        return extractFromExtensions(extensions, Systems.ORGANIZATION, v -> ((Reference) v).getReference());
     }
 
-    private static Optional<String> tryExtractReferenceFromExtensions(List<Extension> extensions, String url) {
-        return tryExtractFromExtensions(extensions, url, v -> ((Reference) v).getReference());
+    private static Optional<String> tryExtractReferenceFromExtensions(List<Extension> extensions) {
+        return tryExtractFromExtensions(extensions, Systems.ORGANIZATION, v -> ((Reference) v).getReference());
     }
 
     private static <T> T extractFromExtensions(List<Extension> extensions, String url, Function<Type, T> extractor) {
-        return tryExtractFromExtensions(extensions, url, extractor)
-                .orElseThrow(() -> new IllegalStateException(String.format("Could not look up url %s among the candidate extensions!", url)));
+        return tryExtractFromExtensions(extensions, url, extractor).orElseThrow(() -> new IllegalStateException(String.format("Could not look up url %s among the candidate extensions!", url)));
     }
-    
+
     private static <T> T extractFromOptionalExtensions(List<Extension> extensions, String url, Function<Type, T> extractor) {
         return tryExtractFromExtensions(extensions, url, extractor).orElse(null);
     }
 
     private static <T> Optional<T> tryExtractFromExtensions(List<Extension> extensions, String url, Function<Type, T> extractor) {
-        for(Extension extension : extensions) {
-            if(extension.getUrl().equals(url)) {
-                return Optional.of(extractor.apply(extension.getValue()));
-            }
-        }
-        return Optional.empty();
+        return extensions.stream()
+                .filter(x -> x.getUrl().equals(url))
+                .findFirst()
+                .map(x -> extractor.apply(x.getValue()));
     }
 
 }
